send mail testing on travis

--- a/TestDocuments/TestPlan/TestAll.html
+++ b/TestDocuments/TestPlan/TestAll.html
@@ -22,7 +22,7 @@
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Line Number</th>
-		<td style="border-bottom:1px solid #CCC;">345</td>
+		<td style="border-bottom:1px solid #CCC;">380</td>
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Notes</th>
@@ -52,7 +52,7 @@
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Line Number</th>
-		<td style="border-bottom:1px solid #CCC;">360</td>
+		<td style="border-bottom:1px solid #CCC;">395</td>
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Notes</th>
@@ -82,7 +82,7 @@
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Line Number</th>
-		<td style="border-bottom:1px solid #CCC;">374</td>
+		<td style="border-bottom:1px solid #CCC;">409</td>
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Notes</th>
@@ -112,7 +112,7 @@
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Line Number</th>
-		<td style="border-bottom:1px solid #CCC;">369</td>
+		<td style="border-bottom:1px solid #CCC;">404</td>
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Notes</th>
@@ -142,7 +142,7 @@
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Line Number</th>
-		<td style="border-bottom:1px solid #CCC;">383</td>
+		<td style="border-bottom:1px solid #CCC;">418</td>
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Notes</th>
@@ -172,7 +172,7 @@
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Line Number</th>
-		<td style="border-bottom:1px solid #CCC;">393</td>
+		<td style="border-bottom:1px solid #CCC;">428</td>
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Notes</th>
@@ -202,7 +202,7 @@
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Line Number</th>
-		<td style="border-bottom:1px solid #CCC;">403</td>
+		<td style="border-bottom:1px solid #CCC;">438</td>
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Notes</th>
@@ -232,7 +232,7 @@
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Line Number</th>
-		<td style="border-bottom:1px solid #CCC;">410</td>
+		<td style="border-bottom:1px solid #CCC;">445</td>
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Notes</th>
@@ -262,7 +262,7 @@
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Line Number</th>
-		<td style="border-bottom:1px solid #CCC;">418</td>
+		<td style="border-bottom:1px solid #CCC;">453</td>
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Notes</th>
@@ -292,7 +292,7 @@
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Line Number</th>
-		<td style="border-bottom:1px solid #CCC;">426</td>
+		<td style="border-bottom:1px solid #CCC;">461</td>
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Notes</th>
@@ -322,7 +322,7 @@
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Line Number</th>
-		<td style="border-bottom:1px solid #CCC;">434</td>
+		<td style="border-bottom:1px solid #CCC;">469</td>
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Notes</th>
@@ -352,7 +352,7 @@
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Line Number</th>
-		<td style="border-bottom:1px solid #CCC;">442</td>
+		<td style="border-bottom:1px solid #CCC;">477</td>
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Notes</th>
@@ -382,7 +382,7 @@
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Line Number</th>
-		<td style="border-bottom:1px solid #CCC;">450</td>
+		<td style="border-bottom:1px solid #CCC;">485</td>
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Notes</th>
@@ -412,7 +412,7 @@
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Line Number</th>
-		<td style="border-bottom:1px solid #CCC;">460</td>
+		<td style="border-bottom:1px solid #CCC;">495</td>
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Notes</th>
@@ -442,7 +442,7 @@
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Line Number</th>
-		<td style="border-bottom:1px solid #CCC;">496</td>
+		<td style="border-bottom:1px solid #CCC;">531</td>
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Notes</th>
@@ -472,7 +472,7 @@
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Line Number</th>
-		<td style="border-bottom:1px solid #CCC;">505</td>
+		<td style="border-bottom:1px solid #CCC;">540</td>
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Notes</th>
@@ -502,7 +502,7 @@
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Line Number</th>
-		<td style="border-bottom:1px solid #CCC;">513</td>
+		<td style="border-bottom:1px solid #CCC;">548</td>
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Notes</th>
@@ -532,7 +532,7 @@
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Line Number</th>
-		<td style="border-bottom:1px solid #CCC;">520</td>
+		<td style="border-bottom:1px solid #CCC;">555</td>
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Notes</th>
@@ -562,7 +562,7 @@
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Line Number</th>
-		<td style="border-bottom:1px solid #CCC;">527</td>
+		<td style="border-bottom:1px solid #CCC;">562</td>
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Notes</th>
@@ -592,7 +592,7 @@
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Line Number</th>
-		<td style="border-bottom:1px solid #CCC;">542</td>
+		<td style="border-bottom:1px solid #CCC;">577</td>
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Notes</th>
@@ -622,7 +622,7 @@
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Line Number</th>
-		<td style="border-bottom:1px solid #CCC;">553</td>
+		<td style="border-bottom:1px solid #CCC;">588</td>
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Notes</th>
@@ -652,7 +652,7 @@
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Line Number</th>
-		<td style="border-bottom:1px solid #CCC;">568</td>
+		<td style="border-bottom:1px solid #CCC;">603</td>
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Notes</th>
@@ -682,7 +682,7 @@
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Line Number</th>
-		<td style="border-bottom:1px solid #CCC;">580</td>
+		<td style="border-bottom:1px solid #CCC;">615</td>
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Notes</th>
@@ -712,7 +712,7 @@
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Line Number</th>
-		<td style="border-bottom:1px solid #CCC;">592</td>
+		<td style="border-bottom:1px solid #CCC;">627</td>
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Notes</th>
@@ -742,7 +742,7 @@
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Line Number</th>
-		<td style="border-bottom:1px solid #CCC;">599</td>
+		<td style="border-bottom:1px solid #CCC;">634</td>
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Notes</th>
@@ -772,7 +772,7 @@
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Line Number</th>
-		<td style="border-bottom:1px solid #CCC;">606</td>
+		<td style="border-bottom:1px solid #CCC;">641</td>
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Notes</th>
@@ -802,7 +802,7 @@
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Line Number</th>
-		<td style="border-bottom:1px solid #CCC;">638</td>
+		<td style="border-bottom:1px solid #CCC;">673</td>
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Notes</th>
@@ -832,7 +832,7 @@
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Line Number</th>
-		<td style="border-bottom:1px solid #CCC;">812</td>
+		<td style="border-bottom:1px solid #CCC;">847</td>
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Notes</th>
@@ -862,7 +862,7 @@
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Line Number</th>
-		<td style="border-bottom:1px solid #CCC;">719</td>
+		<td style="border-bottom:1px solid #CCC;">754</td>
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Notes</th>
@@ -892,7 +892,7 @@
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Line Number</th>
-		<td style="border-bottom:1px solid #CCC;">738</td>
+		<td style="border-bottom:1px solid #CCC;">773</td>
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Notes</th>
@@ -922,7 +922,7 @@
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Line Number</th>
-		<td style="border-bottom:1px solid #CCC;">759</td>
+		<td style="border-bottom:1px solid #CCC;">794</td>
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Notes</th>
@@ -952,7 +952,7 @@
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Line Number</th>
-		<td style="border-bottom:1px solid #CCC;">839</td>
+		<td style="border-bottom:1px solid #CCC;">874</td>
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Notes</th>
@@ -982,7 +982,7 @@
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Line Number</th>
-		<td style="border-bottom:1px solid #CCC;">847</td>
+		<td style="border-bottom:1px solid #CCC;">882</td>
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Notes</th>
@@ -1012,7 +1012,7 @@
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Line Number</th>
-		<td style="border-bottom:1px solid #CCC;">854</td>
+		<td style="border-bottom:1px solid #CCC;">889</td>
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Notes</th>
@@ -1042,7 +1042,7 @@
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Line Number</th>
-		<td style="border-bottom:1px solid #CCC;">325</td>
+		<td style="border-bottom:1px solid #CCC;">360</td>
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Notes</th>
@@ -1072,7 +1072,7 @@
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Line Number</th>
-		<td style="border-bottom:1px solid #CCC;">196</td>
+		<td style="border-bottom:1px solid #CCC;">231</td>
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Notes</th>
@@ -1102,7 +1102,7 @@
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Line Number</th>
-		<td style="border-bottom:1px solid #CCC;">217</td>
+		<td style="border-bottom:1px solid #CCC;">252</td>
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Notes</th>
@@ -1132,7 +1132,7 @@
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Line Number</th>
-		<td style="border-bottom:1px solid #CCC;">238</td>
+		<td style="border-bottom:1px solid #CCC;">273</td>
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Notes</th>
@@ -1162,7 +1162,7 @@
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Line Number</th>
-		<td style="border-bottom:1px solid #CCC;">262</td>
+		<td style="border-bottom:1px solid #CCC;">297</td>
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Notes</th>
@@ -1192,7 +1192,7 @@
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Line Number</th>
-		<td style="border-bottom:1px solid #CCC;">300</td>
+		<td style="border-bottom:1px solid #CCC;">335</td>
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Notes</th>
@@ -1222,7 +1222,7 @@
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Line Number</th>
-		<td style="border-bottom:1px solid #CCC;">666</td>
+		<td style="border-bottom:1px solid #CCC;">701</td>
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Notes</th>
@@ -1252,10 +1252,70 @@
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Line Number</th>
-		<td style="border-bottom:1px solid #CCC;">696</td>
+		<td style="border-bottom:1px solid #CCC;">731</td>
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Notes</th>
 		<td style="border-bottom:1px solid #CCC;">hasil tes method untuk menghapus jadwal menggunakan username</td>
+	</tr>
+</table>
+<table style="width:100%; font-size:small; margin:10px 0; border-collapse:collapse; border:1px solid #CCC;">
+	<tr>
+		<th style="text-align: left; border-bottom:1px solid #CCC;">Test Name</th>
+		<td style="border-bottom:1px solid #CCC;">testSendEmail</td>
+	</tr>
+	<tr>
+		<th style="text-align: left; border-bottom:1px solid #CCC;">Test Datatype</th>
+		<td style="border-bottom:1px solid #CCC;">Null</td>
+	</tr>
+	<tr>
+		<th style="text-align: left; border-bottom:1px solid #CCC;">Expected Datatype</th>
+		<td style="border-bottom:1px solid #CCC;">Null</td>
+	</tr>
+	<tr>
+		<th style="text-align: left; border-bottom:1px solid #CCC;">Result</th>
+		<td style="border-bottom:1px solid #CCC;"><span style="color: #0C0;">Passed</span></td>
+	</tr>
+	<tr>
+		<th style="text-align: left; border-bottom:1px solid #CCC;">File Name</th>
+		<td style="border-bottom:1px solid #CCC;">C:\xampp\htdocs\BlueTape\www\application\controllers\tests\TestAll.php</td>
+	</tr>
+	<tr>
+		<th style="text-align: left; border-bottom:1px solid #CCC;">Line Number</th>
+		<td style="border-bottom:1px solid #CCC;">194</td>
+	</tr>
+	<tr>
+		<th style="text-align: left; border-bottom:1px solid #CCC;">Notes</th>
+		<td style="border-bottom:1px solid #CCC;">test email when it not send</td>
+	</tr>
+</table>
+<table style="width:100%; font-size:small; margin:10px 0; border-collapse:collapse; border:1px solid #CCC;">
+	<tr>
+		<th style="text-align: left; border-bottom:1px solid #CCC;">Test Name</th>
+		<td style="border-bottom:1px solid #CCC;">testSendEmail_DebugTrue</td>
+	</tr>
+	<tr>
+		<th style="text-align: left; border-bottom:1px solid #CCC;">Test Datatype</th>
+		<td style="border-bottom:1px solid #CCC;">String</td>
+	</tr>
+	<tr>
+		<th style="text-align: left; border-bottom:1px solid #CCC;">Expected Datatype</th>
+		<td style="border-bottom:1px solid #CCC;">String</td>
+	</tr>
+	<tr>
+		<th style="text-align: left; border-bottom:1px solid #CCC;">Result</th>
+		<td style="border-bottom:1px solid #CCC;"><span style="color: #0C0;">Passed</span></td>
+	</tr>
+	<tr>
+		<th style="text-align: left; border-bottom:1px solid #CCC;">File Name</th>
+		<td style="border-bottom:1px solid #CCC;">C:\xampp\htdocs\BlueTape\www\application\controllers\tests\TestAll.php</td>
+	</tr>
+	<tr>
+		<th style="text-align: left; border-bottom:1px solid #CCC;">Line Number</th>
+		<td style="border-bottom:1px solid #CCC;">211</td>
+	</tr>
+	<tr>
+		<th style="text-align: left; border-bottom:1px solid #CCC;">Notes</th>
+		<td style="border-bottom:1px solid #CCC;">test email when it not send</td>
 	</tr>
 </table>
