completing readme.md

--- a/TestDocuments/TestPlan/TestTranskripModel.html
+++ b/TestDocuments/TestPlan/TestTranskripModel.html
@@ -2,7 +2,7 @@
 <table style="width:100%; font-size:small; margin:10px 0; border-collapse:collapse; border:1px solid #CCC;">
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Test Name</th>
-		<td style="border-bottom:1px solid #CCC;">requestTypesForbidden1</td>
+		<td style="border-bottom:1px solid #CCC;">testRequestBy</td>
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Test Datatype</th>
@@ -22,7 +22,187 @@
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Line Number</th>
+		<td style="border-bottom:1px solid #CCC;">52</td>
+	</tr>
+	<tr>
+		<th style="text-align: left; border-bottom:1px solid #CCC;">Notes</th>
+		<td style="border-bottom:1px solid #CCC;"></td>
+	</tr>
+</table>
+<table style="width:100%; font-size:small; margin:10px 0; border-collapse:collapse; border:1px solid #CCC;">
+	<tr>
+		<th style="text-align: left; border-bottom:1px solid #CCC;">Test Name</th>
+		<td style="border-bottom:1px solid #CCC;">testRequestByID</td>
+	</tr>
+	<tr>
+		<th style="text-align: left; border-bottom:1px solid #CCC;">Test Datatype</th>
+		<td style="border-bottom:1px solid #CCC;">Null</td>
+	</tr>
+	<tr>
+		<th style="text-align: left; border-bottom:1px solid #CCC;">Expected Datatype</th>
+		<td style="border-bottom:1px solid #CCC;">Null</td>
+	</tr>
+	<tr>
+		<th style="text-align: left; border-bottom:1px solid #CCC;">Result</th>
+		<td style="border-bottom:1px solid #CCC;"><span style="color: #0C0;">Passed</span></td>
+	</tr>
+	<tr>
+		<th style="text-align: left; border-bottom:1px solid #CCC;">File Name</th>
+		<td style="border-bottom:1px solid #CCC;">C:\xampp\htdocs\BlueTape\www\application\controllers\tests\TestTranskrip_model.php</td>
+	</tr>
+	<tr>
+		<th style="text-align: left; border-bottom:1px solid #CCC;">Line Number</th>
+		<td style="border-bottom:1px solid #CCC;">65</td>
+	</tr>
+	<tr>
+		<th style="text-align: left; border-bottom:1px solid #CCC;">Notes</th>
+		<td style="border-bottom:1px solid #CCC;"></td>
+	</tr>
+</table>
+<table style="width:100%; font-size:small; margin:10px 0; border-collapse:collapse; border:1px solid #CCC;">
+	<tr>
+		<th style="text-align: left; border-bottom:1px solid #CCC;">Test Name</th>
+		<td style="border-bottom:1px solid #CCC;">testLimitRequestBy</td>
+	</tr>
+	<tr>
+		<th style="text-align: left; border-bottom:1px solid #CCC;">Test Datatype</th>
+		<td style="border-bottom:1px solid #CCC;">Array</td>
+	</tr>
+	<tr>
+		<th style="text-align: left; border-bottom:1px solid #CCC;">Expected Datatype</th>
+		<td style="border-bottom:1px solid #CCC;">Array</td>
+	</tr>
+	<tr>
+		<th style="text-align: left; border-bottom:1px solid #CCC;">Result</th>
+		<td style="border-bottom:1px solid #CCC;"><span style="color: #0C0;">Passed</span></td>
+	</tr>
+	<tr>
+		<th style="text-align: left; border-bottom:1px solid #CCC;">File Name</th>
+		<td style="border-bottom:1px solid #CCC;">C:\xampp\htdocs\BlueTape\www\application\controllers\tests\TestTranskrip_model.php</td>
+	</tr>
+	<tr>
+		<th style="text-align: left; border-bottom:1px solid #CCC;">Line Number</th>
+		<td style="border-bottom:1px solid #CCC;">77</td>
+	</tr>
+	<tr>
+		<th style="text-align: left; border-bottom:1px solid #CCC;">Notes</th>
+		<td style="border-bottom:1px solid #CCC;"></td>
+	</tr>
+</table>
+<table style="width:100%; font-size:small; margin:10px 0; border-collapse:collapse; border:1px solid #CCC;">
+	<tr>
+		<th style="text-align: left; border-bottom:1px solid #CCC;">Test Name</th>
+		<td style="border-bottom:1px solid #CCC;">testLimitRequestByID</td>
+	</tr>
+	<tr>
+		<th style="text-align: left; border-bottom:1px solid #CCC;">Test Datatype</th>
+		<td style="border-bottom:1px solid #CCC;">Null</td>
+	</tr>
+	<tr>
+		<th style="text-align: left; border-bottom:1px solid #CCC;">Expected Datatype</th>
+		<td style="border-bottom:1px solid #CCC;">Null</td>
+	</tr>
+	<tr>
+		<th style="text-align: left; border-bottom:1px solid #CCC;">Result</th>
+		<td style="border-bottom:1px solid #CCC;"><span style="color: #0C0;">Passed</span></td>
+	</tr>
+	<tr>
+		<th style="text-align: left; border-bottom:1px solid #CCC;">File Name</th>
+		<td style="border-bottom:1px solid #CCC;">C:\xampp\htdocs\BlueTape\www\application\controllers\tests\TestTranskrip_model.php</td>
+	</tr>
+	<tr>
+		<th style="text-align: left; border-bottom:1px solid #CCC;">Line Number</th>
+		<td style="border-bottom:1px solid #CCC;">90</td>
+	</tr>
+	<tr>
+		<th style="text-align: left; border-bottom:1px solid #CCC;">Notes</th>
+		<td style="border-bottom:1px solid #CCC;"></td>
+	</tr>
+</table>
+<table style="width:100%; font-size:small; margin:10px 0; border-collapse:collapse; border:1px solid #CCC;">
+	<tr>
+		<th style="text-align: left; border-bottom:1px solid #CCC;">Test Name</th>
+		<td style="border-bottom:1px solid #CCC;">requestTypesForbidden1</td>
+	</tr>
+	<tr>
+		<th style="text-align: left; border-bottom:1px solid #CCC;">Test Datatype</th>
+		<td style="border-bottom:1px solid #CCC;">Array</td>
+	</tr>
+	<tr>
+		<th style="text-align: left; border-bottom:1px solid #CCC;">Expected Datatype</th>
+		<td style="border-bottom:1px solid #CCC;">String</td>
+	</tr>
+	<tr>
+		<th style="text-align: left; border-bottom:1px solid #CCC;">Result</th>
+		<td style="border-bottom:1px solid #CCC;"><span style="color: #C00;">Failed</span></td>
+	</tr>
+	<tr>
+		<th style="text-align: left; border-bottom:1px solid #CCC;">File Name</th>
+		<td style="border-bottom:1px solid #CCC;">C:\xampp\htdocs\BlueTape\www\application\controllers\tests\TestTranskrip_model.php</td>
+	</tr>
+	<tr>
+		<th style="text-align: left; border-bottom:1px solid #CCC;">Line Number</th>
 		<td style="border-bottom:1px solid #CCC;">104</td>
+	</tr>
+	<tr>
+		<th style="text-align: left; border-bottom:1px solid #CCC;">Notes</th>
+		<td style="border-bottom:1px solid #CCC;"></td>
+	</tr>
+</table>
+<table style="width:100%; font-size:small; margin:10px 0; border-collapse:collapse; border:1px solid #CCC;">
+	<tr>
+		<th style="text-align: left; border-bottom:1px solid #CCC;">Test Name</th>
+		<td style="border-bottom:1px solid #CCC;">requestTypesForbidden2</td>
+	</tr>
+	<tr>
+		<th style="text-align: left; border-bottom:1px solid #CCC;">Test Datatype</th>
+		<td style="border-bottom:1px solid #CCC;">Array</td>
+	</tr>
+	<tr>
+		<th style="text-align: left; border-bottom:1px solid #CCC;">Expected Datatype</th>
+		<td style="border-bottom:1px solid #CCC;">String</td>
+	</tr>
+	<tr>
+		<th style="text-align: left; border-bottom:1px solid #CCC;">Result</th>
+		<td style="border-bottom:1px solid #CCC;"><span style="color: #C00;">Failed</span></td>
+	</tr>
+	<tr>
+		<th style="text-align: left; border-bottom:1px solid #CCC;">File Name</th>
+		<td style="border-bottom:1px solid #CCC;">C:\xampp\htdocs\BlueTape\www\application\controllers\tests\TestTranskrip_model.php</td>
+	</tr>
+	<tr>
+		<th style="text-align: left; border-bottom:1px solid #CCC;">Line Number</th>
+		<td style="border-bottom:1px solid #CCC;">118</td>
+	</tr>
+	<tr>
+		<th style="text-align: left; border-bottom:1px solid #CCC;">Notes</th>
+		<td style="border-bottom:1px solid #CCC;"></td>
+	</tr>
+</table>
+<table style="width:100%; font-size:small; margin:10px 0; border-collapse:collapse; border:1px solid #CCC;">
+	<tr>
+		<th style="text-align: left; border-bottom:1px solid #CCC;">Test Name</th>
+		<td style="border-bottom:1px solid #CCC;">requestTypesForbidden3</td>
+	</tr>
+	<tr>
+		<th style="text-align: left; border-bottom:1px solid #CCC;">Test Datatype</th>
+		<td style="border-bottom:1px solid #CCC;">Array</td>
+	</tr>
+	<tr>
+		<th style="text-align: left; border-bottom:1px solid #CCC;">Expected Datatype</th>
+		<td style="border-bottom:1px solid #CCC;">String</td>
+	</tr>
+	<tr>
+		<th style="text-align: left; border-bottom:1px solid #CCC;">Result</th>
+		<td style="border-bottom:1px solid #CCC;"><span style="color: #C00;">Failed</span></td>
+	</tr>
+	<tr>
+		<th style="text-align: left; border-bottom:1px solid #CCC;">File Name</th>
+		<td style="border-bottom:1px solid #CCC;">C:\xampp\htdocs\BlueTape\www\application\controllers\tests\TestTranskrip_model.php</td>
+	</tr>
+	<tr>
+		<th style="text-align: left; border-bottom:1px solid #CCC;">Line Number</th>
+		<td style="border-bottom:1px solid #CCC;">132</td>
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Notes</th>
